--- a/meta-mb-internal/docker/environment.yml
+++ b/meta-mb-internal/docker/environment.yml
@@ -35,10 +35,12 @@ dependencies:
         - numpy==1.15.1
         - nbformat==4.4.0
         - nose==1.3.7
+        - opencv-python==4.2.0
         - Pillow==5.2.0
         - pip==10.0.1
         - plotly==3.2.0
         - protobuf==3.6.1
+        - psutil==5.7.0
         - pycparser==2.18
         - pyglet==1.3.2
         - PyOpenGL==3.1.0
