--- a/environment.yaml
+++ b/environment.yaml
@@ -9,6 +9,13 @@ dependencies:
     - blosc
     - pip
     - pip:
-        - gym
         - scikit-build
         - torch
+        - opencv-python
+        - gym_minigrid
+        - numpy==1.19.5
+        - gym=0.18.0
+        - colorama
+        - matplotlib==2.2.3
+        - imageio==2.4.1
+        - joblib==0.12.4
