--- a/environment.yaml
+++ b/environment.yaml
@@ -19,3 +19,5 @@ dependencies:
         - matplotlib==2.2.3
         - imageio==2.4.1
         - joblib==0.12.4
+        - psutil
+        - pyprind
