--- a/environment.yaml
+++ b/environment.yaml
@@ -14,7 +14,7 @@ dependencies:
         - opencv-python
         - gym_minigrid
         - numpy==1.19.5
-        - gym=0.18.0
+        - gym==0.18.0
         - colorama
         - matplotlib==2.2.3
         - imageio==2.4.1
